feat: implemented the whole CreateChat logic and tested with swagger
