# docs/swagger.yaml
@@ -1,27 +1,12 @@
 definitions:
-  handlers.ActiveUsersResponse:
-    properties:
-      active_users:
-        example:
-        - user_1
-        - user_2
-        items:
-          type: string
-        type: array
-    type: object
-  handlers.AuthResponse:
+  auth_handlers.AuthResponse:
     properties:
       access_token:
         type: string
       refresh_token:
         type: string
     type: object
-  handlers.ErrorResponse:
-    properties:
-      error:
-        type: string
-    type: object
-  handlers.loginRequest:
+  auth_handlers.loginRequest:
     properties:
       email:
         example: user@example.com
@@ -33,7 +18,7 @@ definitions:
     - email
     - password
     type: object
-  handlers.registerRequest:
+  auth_handlers.registerRequest:
     properties:
       email:
         example: user@example.com
@@ -45,6 +30,38 @@ definitions:
     required:
     - email
     - password
+    type: object
+  chat_handlers.ActiveUsersResponse:
+    properties:
+      active_users:
+        example:
+        - user_1
+        - user_2
+        items:
+          type: string
+        type: array
+    type: object
+  chat_handlers.CreateChatRequest:
+    properties:
+      receiver_id:
+        type: string
+      sender_id:
+        type: string
+    required:
+    - receiver_id
+    - sender_id
+    type: object
+  chat_handlers.CreateChatResponse:
+    properties:
+      chat_id:
+        type: string
+      chat_name:
+        type: string
+    type: object
+  utils.ErrorResponse:
+    properties:
+      error:
+        type: string
     type: object
 info:
   contact: {}
@@ -74,15 +91,15 @@ paths:
           description: 'Could not get the link from url path. Possible "error" values
             : [BAD_REQUEST]'
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/utils.ErrorResponse'
         "410":
           description: 'Activation link is expired . Possible "error" values : [ACTIVATION_TIME_EXPIRED]'
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/utils.ErrorResponse'
         "500":
           description: 'Server failed to process . Possible "error" values : [INTERNAL_SERVER_ERROR]'
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/utils.ErrorResponse'
       summary: Activate
       tags:
       - Registration
@@ -97,26 +114,26 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/handlers.loginRequest'
+          $ref: '#/definitions/auth_handlers.loginRequest'
       produces:
       - application/json
       responses:
-        "201":
+        "200":
           description: Session was successfully created
           schema:
-            $ref: '#/definitions/handlers.AuthResponse'
+            $ref: '#/definitions/auth_handlers.AuthResponse'
         "400":
           description: 'Possible "error" values: [EMPTY_AUTH_CREDS] '
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/utils.ErrorResponse'
         "401":
           description: "Possible \"error\" values: [INVALID_CREDS, \"any\tother\tprintable\terrors\"]"
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/utils.ErrorResponse'
         "500":
           description: 'Server failed to process . Possible "error" values : [INTERNAL_SERVER_ERROR]'
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/utils.ErrorResponse'
       summary: Login
       tags:
       - Authentication
@@ -139,11 +156,11 @@ paths:
         "401":
           description: 'Possible "error" values: [EMPTY_AUTH_CREDS]'
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/utils.ErrorResponse'
         "500":
           description: 'Server failed to process . Possible "error" values : [INTERNAL_SERVER_ERROR]'
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/utils.ErrorResponse'
       summary: Log out
       tags:
       - Authorization
@@ -170,7 +187,7 @@ paths:
         "500":
           description: 'Possible "error" values: [INTERNAL_SERVER_ERROR]'
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/utils.ErrorResponse'
       summary: Checking authorization
       tags:
       - Profile
@@ -191,15 +208,15 @@ paths:
         "200":
           description: New refreshed token pair returned. So update them both
           schema:
-            $ref: '#/definitions/handlers.AuthResponse'
+            $ref: '#/definitions/auth_handlers.AuthResponse'
         "401":
           description: "Possible \"error\" values: [INVALID_CREDS,\"all\tother\terrors\"]"
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/utils.ErrorResponse'
         "500":
           description: 'Server failed to process . Possible "error" values : [INTERNAL_SERVER_ERROR]'
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/utils.ErrorResponse'
       summary: refresh
       tags:
       - Authorization
@@ -214,7 +231,7 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/handlers.registerRequest'
+          $ref: '#/definitions/auth_handlers.registerRequest'
       produces:
       - application/json
       responses:
@@ -223,24 +240,67 @@ paths:
         "400":
           description: "Request is invalid. Possible \"error\" values:[USER_ALREADY_EXISTS,\"all\tothers\tare\tcaused\tby\tthe\trequest's\tincorrectness\"]"
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/utils.ErrorResponse'
         "500":
           description: 'Server failed to process. Possible "error" values : [INTERNAL_SERVER_ERROR]'
           schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
+            $ref: '#/definitions/utils.ErrorResponse'
       summary: Register
       tags:
       - Registration
-  /users/active:
+  /api/v1/chats/create:
+    post:
+      consumes:
+      - application/json
+      description: Initiates a new chat between two users or returns existing. If
+        a 1-to-1 chat already exists between these users, it returns the existing
+        chat details.
+      parameters:
+      - description: Insert 'Bearer <AccessToken>'
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Create Chat Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/chat_handlers.CreateChatRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully created or retrieved chat
+          schema:
+            $ref: '#/definitions/chat_handlers.CreateChatResponse'
+        "400":
+          description: Invalid request body or missing fields
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+      summary: Create or get a 1-to-1 chat
+      tags:
+      - chats
+  /api/v1/users/active:
     get:
       description: Returns an array of all currently connected User IDs.
+      parameters:
+      - description: Insert 'Bearer <AccessToken>'
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/handlers.ActiveUsersResponse'
+            $ref: '#/definitions/chat_handlers.ActiveUsersResponse'
       summary: List active users
       tags:
       - users
@@ -248,6 +308,11 @@ paths:
     get:
       description: Initiates a WebSocket connection. Requires user_id in query.
       parameters:
+      - description: Insert 'Bearer <AccessToken>'
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User ID
         in: query
         name: user_id
